fix font weight and adjust gap between user items

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
         "user-reviews-container user-reviews-container";
     margin: 0 auto;
     margin-top: 3em;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding-left: 3em;
+    padding-right: 3em;
     max-width: 70em;
 }
 
@@ -51,6 +51,7 @@ body {
 .star-reviews-container {
     color: var(--dark-purply);
     grid-area: star-reviews;
+    font-weight: 700;
     justify-self: end;
     align-self: center;
 }
@@ -61,9 +62,9 @@ body {
     justify-content: flex-start;
     align-content: center;
     border-radius: 10px;
-    max-width: 23em;
-    padding-left: 2em;
-    padding-right: 2em;
+    max-width: 25em;
+    padding-left: 1em;
+    padding-right: 1em;
     margin-bottom: 1em;
 }
 
@@ -87,6 +88,7 @@ body {
     grid-area: user-reviews-container;
     width: 100%;
     display: flex;
+    gap: 1em;
     justify-content: space-between;
     margin-top: 3.5em;
 }
@@ -97,7 +99,6 @@ body {
     padding: 2em;
     max-height: 12em;
     width: 25%;
-    margin-right: 1em;
 }
 
 .second-rev {
